solved most coding style errors